--- a/ng-kitsune-site/package.json
+++ b/ng-kitsune-site/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "scully": "npx scully -- --project ng-kitsune-site",
+    "scully:serve": "npx scully serve -- --project ng-kitsune-site"
   },
   "private": true,
   "dependencies": {
@@ -17,7 +19,12 @@
     "@angular/forms": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/platform-server": "^12",
     "@angular/router": "^14.2.0",
+    "@scullyio/init": "^2.1.41",
+    "@scullyio/ng-lib": "^2.1.0",
+    "@scullyio/platform-server": "^2.1.0",
+    "@scullyio/scully": "^2.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
