--- a/package.json
+++ b/package.json
@@ -40,17 +40,15 @@
     "@typescript-eslint/parser": "5.62.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.44.0",
-    "husky": "^8.0.0",
     "jasmine-core": "~4.6.0",
-    "jest": "^29.6.1",
-    "jest-environment-jsdom": "^29.6.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "3.0.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.3",
+    "husky": "^8.0.0"
   },
   "config": {
     "commitizen": {
