--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "prepare": "husky install",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
-    "test:ci": "jest --runInBand"
+    "test:ci": "jest --runInBand",
+    "storybook": "ng run ng-kitsune:storybook",
+    "build-storybook": "ng run ng-kitsune:build-storybook"
   },
   "private": true,
   "dependencies": {
@@ -37,6 +39,13 @@
     "@angular-eslint/template-parser": "16.1.0",
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
+    "@compodoc/compodoc": "^1.1.21",
+    "@storybook/addon-essentials": "^7.1.0",
+    "@storybook/addon-interactions": "^7.1.0",
+    "@storybook/addon-links": "^7.1.0",
+    "@storybook/angular": "^7.1.0",
+    "@storybook/blocks": "^7.1.0",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
@@ -46,6 +55,9 @@
     "jest": "^29.6.1",
     "jest-preset-angular": "^13.1.1",
     "prettier": "3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.1.0",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3"
   },
